ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab-ingress
  namespace: lab
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /kafka
    alb.ingress.kubernetes.io/success-codes: "200,302,404"
spec:
  ingressClassName: alb
  rules:
  - host: lab.dataiesb.com
    http:
      paths:
      - path: /kafka
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              number: 80
